loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:1: error: not found: value isOverOrange
while(isOverOrange==false) {
      ^Poucet1:5: error: not found: value isOverBaggel
    if (isOverBaggel==true) {
        ^